ver 0.21.8 (not yet released)
* output
  - httpd: add missing mutex lock
  - httpd: fix use-after-free bug
* fix Bonjour bug
* fix build failure with GCC 9
* fix build failure with -Ddatabase=false
* systemd: add user socket unit

ver 0.21.7 (2019/04/03)
* input
  - qobuz/tidal: scan tags when loading a playlist
* require Meson 0.49.0 for native libgcrypt-config support
* fix build failure with -Dlocal_socket=false
* Haiku
  - fix build
  - add version info

ver 0.21.6 (2019/03/17)
* protocol
  - allow loading playlists specified as absolute filesystem paths
  - fix negated filter expressions with multiple tag values
  - fix "list" with filter expression
  - omit empty playlist names in "listplaylists"
* input
  - cdio_paranoia: fix build failure due to missing #include
* decoder
  - opus: fix replay gain when there are no other tags
  - opus: fix seeking to beginning of song
  - vorbis: fix Tremor conflict resulting in crash
* output
  - pulse: work around error with unusual channel count
  - osx: fix build failure
* playlist
  - flac: fix use-after-free bug
* support abstract sockets on Linux
* Windows
  - remove the unused libwinpthread-1.dll dependency
* Android
  - enable SLES power saving mode

ver 0.21.5 (2019/02/22)
* protocol
  - fix deadlock in "albumart" command
  - fix "tagtypes disable" command
* database
  - simple: fix assertion failure
  - fix assertion failures with mount points
* storage
  - udisks: fix "AlreadyMounted" error
  - udisks: use relative path from mount URI
  - fix memory leak
* input
  - buffer: fix crash bug when playing remote WAV file
* tags
  - ape: map "Album Artist"
* output
  - shout: add support for TLS
* mixer
  - pulse: add "scale_volume" setting

ver 0.21.4 (2019/01/04)
* database
  - inotify: fix crash bug "terminate called after throwing ..."
  - upnp: implement "list ... group"
* output
  - httpd: declare protocol "HTTP/1.1" instead of "ICY"
* remove libwrap support
* Windows